--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
 	"dependencies": {
 		"body-parser": "1.20.2",
 		"cors": "2.8.5",
+		"dotenv": "16.1.4",
 		"express": "4.18.2",
 		"morgan": "1.10.0",
 		"node": "20.2.0",
-		"sequelize": "6.32.0"
+		"sequelize": "6.32.0",
+		"tedious": "16.1.0"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.22"
+		"nodemon": "2.0.22"
 	}
 }
